--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         EXPLORE A NATUREZA! 🌲
     </h1>
     <main class="maindiv">
-        <ul class="navbar">
+        <ul class="navbar js-list">
             <li>
                 <img src="./img/Florestas.jpg" alt="Florestas" class="navbar-img">
             </li>
@@ -64,7 +64,7 @@
                 <img src="./img/praias.jpg" alt="Praias" class="navbar-img">
             </li>
         </ul>
-        <div id="mainsection-align">
+        <div id="mainsection-align js-conteudo">
             <section class="mainsection">
                 <h2 id="mainsection-tittle">
                     <span class="material-symbols-outlined">
