--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <img src="./img/praias.jpg" alt="Praias" class="navbar-img">
             </li>
         </ul>
-        <div id="mainsection-align js-conteudo">
-            <section class="mainsection">
+        <div id="mainsection-align js-content">
+            <section class="mainsection active">
                 <h2 id="mainsection-tittle">
                     <span class="material-symbols-outlined">
                         Eco
