--- a/index.html
+++ b/index.html
@@ -306,6 +306,6 @@
             © 2023 - Todos os direitos reservados
         </p>
     </footer>
-    <script src="./js/script.js"></script>
+    <script type="module" src="./js/script.js"></script>
 </body>
 </html>
