--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <div class="toggle">
-        MENU
-        <span class="material-symbols-outlined">
-            menu
-        </span>
-    </div>
     <nav class="menu">
-        <ul class="menu-list">
+        <div class="toggle">
+            MENU
+            <span class="material-symbols-outlined">
+                menu
+            </span>
+        </div>
+        <ul class="menu-list js-lista">
             <li class="menu-links">
-                <a href="">
+                <a href="#">
                     <span class="material-symbols-outlined" style="margin-right: 10px;">
                         Eco
                     </span>
@@ -27,7 +27,7 @@
                 </a>
             </li>
             <li class="menu-links">
-                <a href="">
+                <a href="#">
                     <span class="material-symbols-outlined" style="margin-right: 10px;">
                         Quiz
                     </span>
@@ -35,7 +35,7 @@
                 </a>
             </li>
             <li class="menu-links">
-                <a href="">
+                <a href="#">
                     <span class="material-symbols-outlined" style="margin-right: 10px;">
                         contact_support
                     </span>
@@ -43,7 +43,7 @@
                 </a>
             </li>
             <li class="menu-links">
-                <a href="">
+                <a href="#">
                     <span class="material-symbols-outlined">
                         code_blocks
                     </span>
@@ -167,8 +167,8 @@
             </section>
         </div>
     </main>
-    <section >
-        <h1 class="title" id="faq">FAQ💬.......... </h1>
+    <section>
+        <h1 class="title">FAQ💬.......... </h1>
         <div class="faq-contanier">
             <div class="faq">
             <div class="pergunta">
