--- a/index.html
+++ b/index.html
@@ -306,6 +306,18 @@
             © 2023 - Todos os direitos reservados
         </p>
     </footer>
+    <div class=" modal js-modal">
+        <span class="material-symbols-outlined modal-close">
+            close
+        </span>
+        <form class="modal-forms">
+            <h3>RECEBA NOTIFICAÇÕES:</h3>
+            <label for="">Email:</label>
+            <input name="email" type="email" placeholder="Insira seu email" required="">
+            <input type="submit" value="Enviar">
+        </form>
+        <div id="msg"></div>
+    </div>
     <script type="module" src="./js/script.js"></script>
 </body>
 </html>
