--- a/index.html
+++ b/index.html
@@ -314,6 +314,8 @@
             <h3>RECEBA NOTIFICAÇÕES:</h3>
             <label for="">Email:</label>
             <input name="email" type="email" placeholder="Insira seu email" required="">
+            <label for="">Senha:</label>
+            <input name="senha" type="senha" placeholder="Insira sua senha" required="">
             <input type="submit" value="Enviar">
         </form>
         <div id="msg"></div>
